# bill_lens

./: .gitignore  AGENTS.md  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/routes/: analyze.py  auth.py  history.py
backend/app/schemas/: auth.py  bill.py
backend/app/services/: llm_chain.py  ocr.py
frontend/: nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/.claude/: launch.json
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  bills.js  client.js
frontend/src/components/: AuditColumn.jsx  ConfigPanel.jsx  DisclaimerModal.jsx  Header.jsx  ResultsDashboard.jsx  RiskBadge.jsx  StrategyColumn.jsx  UploadHero.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/data/: mockResults.js
frontend/src/pages/: AnalyzePage.jsx  DashboardPage.jsx  LoginPage.jsx  ResultsPage.jsx  SignupPage.jsx
medbill_advocate/: __init__.py  config.py  extraction.py  llm.py  ocr.py  prompts.py  rules.py
